--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "angular-animate": "^1.4.8",
     "angular-aria": "^1.4.8",
     "angular-material": "^1.0.0",
-    "angular-route": "~1.4.8"
+    "angular-ui-router": "~1.4.8"
   },
   "devDependencies": {
     "angular-material": "https://github.com/angular/bower-material.git#master"
