--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "postinstall": "bower update",
     "prestart": "npm update",
     "test": "protractor ./e2e/protractor.conf.js"
+  },
+  "dependencies": {
+    "angular-ui-router": "^0.4.2"
   }
 }
