--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "protractor ./e2e/protractor.conf.js"
   },
   "dependencies": {
-    "angular-ui-router": "^0.4.2"
+    "body-parser": "^1.16.0",
+    "express": "^4.14.1"
   }
 }
