--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "selenium-webdriver": "^2.45.1"
   },
   "scripts": {
-    "postinstall": "bower update",
     "prestart": "npm update",
-    "test": "protractor ./e2e/protractor.conf.js",
     "start": "node server/server.js"
   },
   "dependencies": {
     "body-parser": "^1.16.0",
     "cool-ascii-faces": "1.3.4",
     "express": "^4.14.1",
-    "mongoose": "^4.8.1"
+    "mongoose": "^4.8.1",
+    "angular": "^1.4.8",
+    "angular-animate": "^1.4.8",
+    "angular-aria": "^1.4.8",
+    "angular-material": "^1.0.0",
+    "angular-route": "^1.6.2"
   }
 }
